<?xml version="1.0"?>
<package format="2">
  <name>mapf_ros</name>
  <version>0.0.0</version>
  <description>The mapf algorithm package</description>

  <maintainer email="speed@todo.todo">speed</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mapf_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mapf_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mapf_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <mapf_ros plugin="${prefix}/cbs_plugins.xml" />
    <mapf_ros plugin="${prefix}/ecbs_plugins.xml" />
    <mapf_ros plugin="${prefix}/sipp_plugins.xml" />
  </export>

</package>